--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="row-fluid">
           <div class="span6 offset4">
             <h1>Stop worrying about gas prices.</h1>
-            <p class="text-center"><a class="btn btn-large">Find a bicycle</a></p>
+            <p class="text-center"><a class="btn btn-large">Find a Bicycle</a></p>
           </div>
         </div>
       </div>
