jekyll and liquid markup test

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="row-fluid">
           
           <div class="span6">
-            <h3>Planet Argon Bicycles, founded in 1913, builds and sells unique, quality bicycles. Whether you need a fixie or a tall bike, a unicycle or a recumbent, PA Bikes will deliver the goods.</h3>
+            <h3>Planet Argon Bicycles, founded in {{ 1900 | plus: 3 }}, builds and sells unique, quality bicycles. Whether you need a fixie or a tall bike, a unicycle or a recumbent, PA Bikes will deliver the goods.</h3>
             <p>Tattooed bicycle rights nihil, jean shorts swag gentrify mumblecore irure placeat ennui scenester ad before they sold out tempor. Flannel squid mcsweeney's, mollit occupy messenger bag godard incididunt stumptown.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur nihil?</p>
             <p class="text-center"><a class="btn btn-large">Read more</a></p>
