--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 ---
+title: Planet Argon Bicycles - since 1906
 ---
 <!DOCTYPE html>
 <html>
   
   <head>
-    <title>Planet Argon Bicycles</title>
+    <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:700italic,400,600' rel='stylesheet' type='text/css'>
     <link href="css/custom.css" rel="stylesheet" media="screen">
@@ -40,7 +41,7 @@
         <div class="row-fluid">
           
           <div class="span6">
-            <h3>Planet Argon Bicycles, founded in {{ 1900 | plus: 3 }}, builds and sells unique, quality bicycles. Whether you need a fixie or a tall bike, a unicycle or a recumbent, PA Bikes will deliver the goods.</h3>
+            <h3>Planet Argon Bicycles, founded in {{ 1900 | plus: 6 }}, builds and sells unique, quality bicycles. Whether you need a fixie or a tall bike, a unicycle or a recumbent, PA Bikes will deliver the goods.</h3>
             <p>Tattooed bicycle rights nihil, jean shorts swag gentrify mumblecore irure placeat ennui scenester ad before they sold out tempor. Flannel squid mcsweeney's, mollit occupy messenger bag godard incididunt stumptown.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur nihil?</p>
             <p class="text-center"><a class="btn btn-large">Read more</a></p>
