--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@ title: Planet Argon Bicycles - since 1906
       <div class="container">
         <div class="row-fluid">
           <div class="span6 offset4">
-            <h1>{% if page.headline %} {{page.headline}} {% else %}Stop worrying about gas prices{% endif %}.</h1>
+            <h1>
+              {% if page.headline %}
+                {{page.headline}}
+              {% else %}
+                Stop worrying about gas prices
+              {% endif %}.
+            </h1>
             <p class="text-center"><a class="btn btn-large">Find a Bicycle</a></p>
           </div>
         </div>
