--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@ layout: default
             Stop worrying about gas prices
           {% endif %}.
         </h1>
-        <p class="text-center"><a class="btn btn-large">Find a Bicycle</a></p>
+        <p class="text-center"><a href="/index.html#bikes" class="btn btn-large">Find a Bicycle</a></p>
       </div>
     </div>
   </div>
 </div>
 
-<section class="section-about">
+<section class="section-about" id="about">
   <div class="container">    
     <h2 class="banner">About the Shop</h2>
     <div class="row-fluid">
       
       <div class="span6">
         <h3>Planet Argon Bicycles, founded in 1913, builds and sells unique, quality bicycles. Whether you need a fixie or a tall bike, a unicycle or a recumbent, PA Bikes will deliver the goods.</h3>
-        <p>Tattooed bicycle rights nihil, jean shorts swag gentrify mumblecore irure placeat ennui scenester ad before they sold out tempor. Flannel squid mcsweeney's, mollit occupy messenger bag godard incididunt stumptown.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur nihil?</p>
-        <p class="text-center"><a class="btn btn-large">Read more</a></p>
+        <p>Sick of wasting your precious time searching for a parking spot or sitting in traffic? Biking is a great form of exercise, a great way to get to work, and a great method of reducing pollution and road congestion. Best of all, everyone looks sexy riding a bicycle.</p>
+        <p>Ready to take one of our gorgeous bikes for a spin? We'll help match you up with your perfect 2-wheeled companion.</p>
+        <p class="text-center"><a href="#" class="btn btn-large">Read more</a></p>
       </div>
       <div class="span6">
         <img src="http://placekitten.com/600/450" alt=" " />
@@ -39,10 +39,10 @@ layout: default
   </div>
 </section>
 
-<section class="section-bikes">
+<section class="section-bikes" id="bikes">
   <div class="container">
     <h2 class="banner">Our Bikes</h2>
-    <h3 class="text-center">Lorem ipsum dolor sit amet. Libero ducimus deserunt labore est modi dolore veritatis consequuntur natus illo animi!</h3>
+    <h3 class="text-center">We guarantee you've never seen bicycles like these. Our expert bike builders make incredible, functional works of art; everyone leaves our shop happy.</h3>
     
     <div class="row-fluid">
       <div class="span4">
@@ -72,7 +72,7 @@ layout: default
         <p class="lead">If you'd like to learn more about our bikes, feel free to stop by or send us a message.</p>
       </div>
       <div class="span2">
-        <a href="#" class="btn btn-block btn-large">Email Us</a>
+        <a href="mailto:events@planetargon.com" class="btn btn-block btn-large">Email Us</a>
       </div>
     </div>        
   </div>
