add bike gallery images

--- a/index.html
+++ b/index.html
@@ -46,24 +46,24 @@ layout: default
     
     <div class="row-fluid">
       <div class="span4">
-        <img src="http://placekitten.com/400/400" alt="">
+        <img src="/img/bike1.jpg" alt="">
       </div>
       <div class="span4">
-        <img src="http://placekitten.com/400/400" alt="">
+        <img src="/img/bike2.jpg" alt="">
       </div>
       <div class="span4">
-        <img src="http://placekitten.com/400/400" alt="">
+        <img src="/img/bike3.jpg" alt="">
       </div>
     </div>
     <div class="row-fluid">
       <div class="span4">
-        <img src="http://placekitten.com/400/400" alt="">
+        <img src="/img/bike4.jpg" alt="">
       </div>
       <div class="span4">
-        <img src="http://placekitten.com/400/400" alt="">
+        <img src="/img/bike5.jpg" alt="">
       </div>
       <div class="span4">
-        <img src="http://placekitten.com/400/400" alt="">
+        <img src="/img/bike6.jpg" alt="">
       </div>
     </div>
 
