--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
         <p class="text-center"><a href="#" class="btn btn-large">Read more</a></p>
       </div>
       <div class="span6">
-        <img src="http://placekitten.com/600/450" alt=" " />
+        <img src="/img/about.jpg" alt="Jack and Brian, hard at work" />
       </div>
     
     </div>        
