--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 <div class="hero-unit">
   <div class="container">
     <div class="row-fluid">
-      <div class="span6 offset4">
+      <div class="span6 offset6">
         <h1>
           {% if page.headline %}
             {{page.headline}}
@@ -14,7 +14,7 @@ layout: default
             Stop worrying about gas prices
           {% endif %}.
         </h1>
-        <p class="text-center"><a href="/index.html#bikes" class="btn btn-large">Find a Bicycle</a></p>
+        <p class="text-right"><a href="/index.html#bikes" class="btn btn-large">Find a Bicycle</a></p>
       </div>
     </div>
   </div>
@@ -29,7 +29,7 @@ layout: default
         <h3>Planet Argon Bicycles, founded in 1913, builds and sells unique, quality bicycles. Whether you need a fixie or a tall bike, a unicycle or a recumbent, PA Bikes will deliver the goods.</h3>
         <p>Sick of wasting your precious time searching for a parking spot or sitting in traffic? Biking is a great form of exercise, a great way to get to work, and a great method of reducing pollution and road congestion. Best of all, everyone looks sexy riding a bicycle.</p>
         <p>Ready to take one of our gorgeous bikes for a spin? We'll help match you up with your perfect 2-wheeled companion.</p>
-        <p class="text-center"><a href="#" class="btn btn-large">Read more</a></p>
+        <p><a href="#" class="btn btn-large">Read more</a></p>
       </div>
       <div class="span6">
         <img src="/img/about.jpg" alt="Jack and Brian, hard at work" />
