staged new work

--- a/work/homezada.html
+++ b/work/homezada.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Jack Bouba – Work – The Oregonian</title>
+    <title>Jack Bouba – Work – HomeZada</title>
 
     <link href="/stylesheets/styles.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
@@ -25,13 +25,13 @@
         <p><a href="/"><span class="lnr lnr-2x lnr-arrow-left"></span></a></p>
       </div>
       <div class="col-xs-6 text-right reverse">
-        <h1 class="h4 mb0">The Oregonian</h1>
-        <p class="text--supplemental">Recipe Box</p>
+        <h1 class="h4 mb0">HomeZada</h1>
+        <p class="text--supplemental">Web App</p>
       </div>
     </header>
     <div class="row no-gutters mbl">
       <div class="col-sm-6">
-        <img src="/images/portfolio-thumbs/oregonian.jpg" width="1080" height="675" class="img-responsive" />
+        <img src="/images/portfolio-thumbs/homezada.jpg" width="1080" height="675" class="img-responsive" />
       </div>
       <div class="col-sm-6">
         <div class="container-fluid">
@@ -70,13 +70,21 @@
       </div>
       
       <div class="row mbl">
-        <div class="col-sm-12">
-          <img src="/images/oregonian/phone.jpg" class="img-responsive" />
+        <div class="col-sm-6">
+          <img src="/images/homezada/phone.jpg" class="img-responsive" />
+        </div>
+        <div class="col-sm-6">
+          <img src="/images/homezada/tablet.jpg" class="img-responsive" />
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-12">
-          <img src="/images/oregonian/ipad.jpg" class="img-responsive" />
+        <div class="col-sm-8 col-sm-offset-2 mbl">
+          <img src="/images/homezada/browser.jpg" class="img-responsive img-browser" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2 mbxl">
+          <img src="/images/homezada/browser2.jpg" class="img-responsive img-browser" />
         </div>
       </div>
             
