--- a/work/zyn22.html
+++ b/work/zyn22.html
@@ -25,13 +25,13 @@
         <p><a href="/"><span class="lnr lnr-2x lnr-arrow-left"></span></a></p>
       </div>
       <div class="col-xs-6 text-right reverse">
-        <h1 class="h4 mb0">The Oregonian</h1>
-        <p class="text--supplemental">Recipe Box</p>
+        <h1 class="h4 mb0">ZYN22</h1>
+        <p class="text--supplemental">Web App Design</p>
       </div>
     </header>
     <div class="row no-gutters mbl">
       <div class="col-sm-6">
-        <img src="/images/portfolio-thumbs/oregonian.jpg" width="1080" height="675" class="img-responsive" />
+        <img src="/images/portfolio-thumbs/zyn22.jpg" width="1080" height="675" class="img-responsive" />
       </div>
       <div class="col-sm-6">
         <div class="container-fluid">
@@ -70,13 +70,18 @@
       </div>
       
       <div class="row mbl">
-        <div class="col-sm-12">
-          <img src="/images/oregonian/phone.jpg" class="img-responsive" />
+        <div class="col-sm-8 col-sm-offset-2">
+          <img src="/images/zyn22/laptop.jpg" class="img-responsive" />
         </div>
       </div>
-      <div class="row">
-        <div class="col-sm-12">
-          <img src="/images/oregonian/ipad.jpg" class="img-responsive" />
+      <div class="row mbl">
+        <div class="col-sm-8 col-sm-offset-2">
+          <img src="/images/zyn22/browser.png" class="img-responsive img-browser" />
+        </div>
+      </div>
+      <div class="row mbxl">
+        <div class="col-sm-8 col-sm-offset-2">
+          <img src="/images/zyn22/browser2.jpg" class="img-responsive img-browser" />
         </div>
       </div>
             
